Fix UI behaviour on mobile (due to hidden adress bar)

--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -10,7 +10,7 @@
   text-transform: uppercase;
   font-size: .75rem;
   line-height: 1.25rem;
-  overflow: auto;
+  overflow: hidden;
   max-height: 100%;
   transition: all var(--transition-duration) ease;
   align-items: flex-start;
@@ -25,6 +25,9 @@
 
   .nav-container {
     background: rgba(0, 0, 0, 0.5);
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
   
     ul {
       list-style: none;
@@ -45,6 +48,7 @@
       margin: 1rem;
       margin-top: 0;
       display: none;
+      overflow: auto;
 
       // > li {
       //   > div {
